[gd_scene load_steps=10 format=3 uid="uid://start_menu_scene"]

[ext_resource type="Script" path="res://Scripts/UI/StartMenu.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/menus/1st.jpg" id="2"]
[ext_resource type="Texture2D" path="res://assets/backgrounds/menus/start_but.jpg" id="3"]
[ext_resource type="AudioStream" path="res://assets/music/level1_theme.ogg" id="4"]
[ext_resource type="AudioStream" path="res://assets/sfx/button_click.mp3" id="5"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1"]
gradient = SubResource("Gradient_1")

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1"]
direction = Vector3(0, -1, 0)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
gravity = Vector3(0, -50, 0)
scale_min = 0.5
scale_max = 1.5

[sub_resource type="Animation" id="Animation_1"]
resource_name = "HoverHighlight"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonsContainer/NewGameButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.6, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonsContainer/ReloadButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.6, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonsContainer/StageButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.6, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ButtonsContainer/ShopButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.6, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ButtonsContainer/BackButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.6, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
"HoverHighlight": SubResource("Animation_1")
}

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="Particles" type="Particles2D" parent="."]
position = Vector2(960, 1080)
emitting = true
amount = 50
lifetime = 5.0
texture = SubResource("GradientTexture1D_1")
emission_shape = 1
emission_sphere_radius = 1920.0
gravity = Vector2(0, -50)
process_material = SubResource("ParticleProcessMaterial_1")

[node name="ButtonsImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 4

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3)

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -200.0
offset_right = 225.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="NewGameButton" type="TextureButton" parent="ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(450, 90)
focus_mode = 2
mouse_filter = 0

[node name="ReloadButton" type="TextureButton" parent="ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(450, 90)
focus_mode = 2
mouse_filter = 0

[node name="StageButton" type="TextureButton" parent="ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(450, 90)
focus_mode = 2
mouse_filter = 0

[node name="ShopButton" type="TextureButton" parent="ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(450, 90)
focus_mode = 2
mouse_filter = 0

[node name="BackButton" type="TextureButton" parent="ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(450, 90)
focus_mode = 2
mouse_filter = 0

[node name="ButtonFX" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1")
}

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
volume_db = -8.0

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
volume_db = -5.0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
volume_db = -6.0
autoplay = true

